# particle-life

./: CMakeLists.txt  README.md
src/: main.cpp
src/headers/: drawUtils.h  particle.h  physics.h  settings.h  vector2.h  windowHelper.h
